// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommitteeInfo renders correctly 1`] = `
<section
  className="component"
  onClick={[Function]}
>
  <header
    className="header"
  >
    <img
      className="img"
      src="icon-here"
    />
    <h3
      className="name"
    >
      Testkom
    </h3>
  </header>
  <div
    className="info"
  >
    Testkom does stuff
  </div>
</section>
`;

exports[`CommitteeInfo renders correctly after click 1`] = `
<section
  className="component open"
  onClick={[Function]}
>
  <header
    className="header"
  >
    <img
      className="img"
      src="icon-here"
    />
    <h3
      className="name"
    >
      Testkom
    </h3>
  </header>
  <div
    className="info"
  >
    Testkom does stuff
  </div>
</section>
`;
